apps/identity-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  labels:
    app.kubernetes.io/name: identity-service
    app.kubernetes.io/component: identity
    app.kubernetes.io/part-of: bsis
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: identity-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
